2009-05-22  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Eric Seidel.

        Added the use of tileRect() for a correct drawing of
        border-images.

        Testcases for border-image are in fast/borders like
        border-image-01.html and will be activated for cairo, once
        gtk supports pixel tests.

        https://bugs.webkit.org/show_bug.cgi?id=19652
        [CAIRO] wrong drawing of border-image

        * platform/graphics/cairo/ImageCairo.cpp:
        (WebCore::Image::drawPattern):


Canonical link: https://commits.webkit.org/35952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44081 268f45cc-cd09-0410-ab3c-d52691b4dbfc